Fix and extend BaseOffsets test